# kinect_pong

./: .gitignore  CMakeLists.txt  KinectPong.config  KinectPong.files  KinectPong.includes  NiTE.ini  README.md  index.html  kinect_pong.project  plugins.cfg  resources.cfg  style.css
cmake/: FindOpenNI2.cmake
kinect_sandbox/: CMakeLists.txt  handtracker.cpp  usertracker.cpp
libs/: README.txt  download.sh
media/: colors.material
media/imagesets/: Calibration.imageset
media/layouts/: CalibrationState.layout  CalibrationStateKeyboard.layout  CalibrationStateKinect.layout  CalibrationStateKinect2.layout  GameMenu.layout  SettingsMenu.layout
media/looknfeel/: TaharezLook.looknfeel
media/materials/scripts/: flare.material
media/schemes/: KinectPong.scheme  TaharezLook.scheme
src/: CMakeLists.txt  aiplayer.cpp  aiplayer.h  ball.cpp  ball.h  cegui_utils.cpp  cegui_utils.h  gamestate.h  gamestatemanager.cpp  gamestatemanager.h  global.h  guistate.cpp  guistate.h  keyboardplayer.cpp  keyboardplayer.h  kinect.cpp  kinect.h  kinectcalibrationstate.cpp  kinectcalibrationstate.h  kinectcalibrationstate2.cpp  kinectcalibrationstate2.h  kinectplayer.cpp  kinectplayer.h  main.cpp  menustate.cpp  menustate.h  object.cpp  object.h  paddle.cpp  paddle.h  player.cpp  player.h  playstate.cpp  playstate.h  pong2dstate.cpp  pong2dstate.h  pong3dstate.cpp  pong3dstate.h  settingstate.cpp  settingstate.h  (+1 more)
